# blog-examples

./: .gitignore  MODULE.bazel  README.md  maven_install.json  requirements.in  requirements.txt
cpu-issues/: BUILD.bazel  README.md
python-multi-arch-with-base-image/: BUILD.bazel  Dockerfile  README.md
python-multi-arch-with-base-image/base-image/: BUILD.bazel
python-oci/: BUILD.bazel  README.md
ruff-graph/: Makefile  README.md  main.py  pyproject.toml
ruff-graph/scripts/: graph_analyzer.py
ruff-graph/src/: hello.py  lib_a.py  lib_b.py  lib_c.py
ruff-graph/src/tests/: test_lib_a.py  test_lib_b.py
rules-jvm-external-bzlmod-macro/: BUILD.bazel  MODULE.bazel  README.md  dependencies.bzl  maven_install.json
rules-jvm-external-override/: README.md
rules-jvm-external-override/bzlmod/: MODULE.bazel  maven_install.json
rules-jvm-external-override/bzlmod/override/: BUILD.bazel
rules-jvm-external-override/workspace/: WORKSPACE.bazel  maven_install.json
rules-jvm-external-override/workspace/override/: BUILD.bazel
scala-custom-toolchain/: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
scala-custom-toolchain/src/main/scala/io/example/: Main.scala
scala-custom-toolchain/toolchains/: BUILD.bazel
test-shard-python/: shard_test.py
test-shards-java/: BUILD.bazel  README.md
test-shards-java/src/test/java/com/example/: ShardTest.java
test-shards-python/: BUILD.bazel  README.md
