bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")
bazel_dep(name = "rules_java", version = "8.8.0")
bazel_dep(name = "rules_oci", version = "2.2.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "platforms", version = "0.0.10")

# Python
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "aspect_rules_py", version = "1.3.1")
bazel_dep(name = "rules_uv", version = "0.52.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.apache.commons:commons-lang3:3.17.0",
        "com.google.guava:guava:31.0.1-jre",
        "org.junit.jupiter:junit-jupiter-api:5.7.2",
        "org.junit.jupiter:junit-jupiter-engine:5.7.2",
        "org.junit.platform:junit-platform-launcher:1.7.2",
        "org.junit.platform:junit-platform-reporting:1.7.2",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:161a1d97d592b3f1919801578c3a47c8e932071168a96267698f4b669c24c76d",
    image = "gcr.io/distroless/java17",
)
use_repo(oci, "distroless_java")
oci.pull(
    name = "ubuntu",
    digest = "sha256:67211c14fa74f070d27cc59d69a7fa9aeff8e28ea118ef3babc295a0428a6d21",
    image = "ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "ubuntu")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13.1")
use_repo(python, "python_3_13_1")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13.1",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
