bazel_dep(name = "rules_jvm_external", version = "6.7")

#maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
#maven.install(
#    artifacts = [
#        "com.google.guava:guava:31.1-jre",
#    ],
#    lock_file = "//:maven_install.json",
#)
#use_repo(maven, "maven")

bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_java", version = "8.11.0")

deps = use_extension("@//:dependencies.bzl", "deps")
use_repo(deps, "maven", "unpinned_maven")
