load("@aspect_rules_py//py:defs.bzl", "py_pytest_main", "py_test")
load("@pypi//:requirements.bzl", "requirement")

py_pytest_main(
    name = "__test__",
    deps = [requirement("pytest")],
)

py_test(
    name = "shard_test",
    srcs = [
        "__test__.py",
        "shard_test.py",
    ],
    main = "__test__.py",
    package_collisions = "warning",
    shard_count = 2,
    deps = [
        "__test__",
    ],
)
