load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_jvm_external//private/rules:jvm_import.bzl", "jvm_import")

java_library(
    name = "empty_lib",
    srcs = [],
)

java_binary(
    name = "empty_bin",
    main_class = "none",
    runtime_deps = [":empty_lib"],
)

jvm_import(
    name = "my_guava",
    # This is a jar copied into the workspace
    jar = ":empty_lib.jar",
    # This is a generated jar
    # jar = ":empty_bin_deploy.jar",
    # This is the original jar
    # jar = "@maven//:com/google/guava/guava/32.0.1-jre/guava-32.0.1-jre.jar",
    maven_coordinates = "com.google.guava:guava:32.0.1-jre",
    maven_url = "https://repo1.maven.org/maven2/com/google/guava/guava/32.0.1-jre/guava-32.0.1-jre.jar",
    tags = [
        "maven_coordinates=com.google.guava:guava:32.0.1-jre",
        "maven_repository=https://repo1.maven.org/maven2",
        "maven_sha256=bd7fa227591fb8509677d0d1122cf95158f3b8a9f45653f58281d879f6dc48c5",
        "maven_url=https://repo1.maven.org/maven2/com/google/guava/guava/32.0.1-jre/guava-32.0.1-jre.jar",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_failureaccess",
        "@maven//:com_google_guava_listenablefuture",
        "@maven//:com_google_j2objc_j2objc_annotations",
        "@maven//:org_checkerframework_checker_qual",
    ],
)
